git-svn-id: https://svn.apache.org/repos/asf/maven/shared/branches/maven-shared-utils-0.9.x@1783802 13f79535-47bb-0310-9956-ffa450edef68